--- a/fend-project-memory-game-master/css/app.css
+++ b/fend-project-memory-game-master/css/app.css
@@ -80,6 +80,9 @@ h1 {
     background: #02ccba;
     font-size: 33px;
 }
+.deck .card.disable {
+    pointer-events: none;
+}
 
 /*
  * Styles for the Score Panel
@@ -109,6 +112,10 @@ h1 {
 }
 
 
-.deck.card.disabled{
-    pointer-events: none;
+
+
+
+
+.swal2-overlay {
+    background-color: rgba(255,255,255,1);
 }
